--- a/frontend/src/styles/Navbar/Nav.module.css
+++ b/frontend/src/styles/Navbar/Nav.module.css
@@ -25,6 +25,7 @@
     gap: 8px;
     align-items: center;
     stroke: white;
+    color: white;
     padding: 6px 12px;
     border-radius: 12px;
     border: 1px solid transparent;
@@ -108,4 +109,58 @@
 
 .user-dropdown>button:hover{
     background: #48405c;
+}
+
+.dropdown{
+    display: flex;
+    position: relative;
+}
+
+.dropdown>h2{
+    font-size: 18px;
+    font-weight: 600;
+    color: white;
+    stroke: white;
+    display: flex;
+    gap: 8px;
+    align-items: center;
+}
+
+.dropdown>h2>svg{
+    width: 20px;
+    height: 20px;
+}
+
+.dropdown-content{
+    position: absolute;
+    width: 300px;
+    border-radius: 12px;
+    background: red;
+    top: 120%;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.dropdown-item{
+    width: 100%;
+    padding: 12px 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.dropdown-item>h6{
+    font-size: 16px;
+    font-weight: 500;
+    color: white;
+    stroke: white;
+    display: flex;
+    gap: 8px;
+    align-items: center;
+}
+
+.dropdown-item>h6>svg{
+    width: 20px;
+    height: 20px;
 }
