--- a/frontend/src/styles/Reusable/Dropdown.module.css
+++ b/frontend/src/styles/Reusable/Dropdown.module.css
@@ -11,6 +11,7 @@
     border-radius: 12px;
     border: 1px solid var(--success-500);
     cursor: pointer;
+    color: white;
 }
 
 .dropdown-wrapper>span{
@@ -33,6 +34,7 @@
     z-index: 100;
     height: 300px;
     overflow-y: scroll;
+    overflow-x: hidden;
     display: none;
 }
 
@@ -45,6 +47,8 @@
     cursor: pointer;
     font-size: 16px;
     font-weight: 400;
+    color: white;
+    word-break: break-all;
 }
 
 .dropdown-option:hover{
