--- a/frontend/src/styles/Navbar/Nav.module.css
+++ b/frontend/src/styles/Navbar/Nav.module.css
@@ -85,7 +85,7 @@
     }
 }
 
-.user-dropdown>button{
+.user-dropdown>button, .user-dropdown>a>button{
     padding: 12px 16px;
     display: flex;
     align-items: center;
@@ -108,7 +108,7 @@
     border-bottom: none;
 }
 
-.user-dropdown>button:hover{
+.user-dropdown>button:hover, .user-dropdown>a>button:hover{
     background: #48405c;
 }
 
@@ -213,4 +213,29 @@
 .dropdown-item>h6>svg{
     width: 20px;
     height: 20px;
+}
+
+@media only screen and (max-width: 768px) {
+    .navbar{
+        padding: 20px 24px;
+    }
+
+    .nav-buttons{
+        display: none;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) and (max-width: 968px) {
+    .navbar{
+        padding: 20px 50px;
+    }
+}
+
+@media only screen and (min-width: 968px)  and (max-width: 1366px) {
+
+    .navbar{
+        padding: 20px 40px;
+    }
+
 }
