--- a/frontend/src/styles/Directory/SubmissionContainer.module.css
+++ b/frontend/src/styles/Directory/SubmissionContainer.module.css
@@ -52,3 +52,22 @@
     border-radius: 12px;
     margin-top: auto;
 }
+
+.spinner {
+    width: 18px;
+    height: 18px;
+    border: 3px solid;
+    border-color: rgb(255, 255, 247) transparent rgb(255, 255, 247) transparent;
+    border-radius: 50%;
+    animation: spin-anim 1.2s linear infinite;
+}
+  
+@keyframes spin-anim {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
