--- a/frontend/src/styles/LandingPage/Hero.module.css
+++ b/frontend/src/styles/LandingPage/Hero.module.css
@@ -127,3 +127,86 @@
     font-weight: 400;
     color: white; 
 }
+
+@media only screen and (max-width: 768px) {
+    .hero{
+        padding: 0px 24px;
+    }
+
+    .hero-wrapper{
+        flex-direction: column;
+        gap: 32px;
+    }
+
+    .check-section{
+        width: 100%;
+        align-items: flex-start;
+    }
+
+    .main-section{
+        width: 100%;
+        gap: 8px;
+    }
+
+    .main-section>p{
+        font-size: 16px;
+    }
+
+    .heading-container>h1{
+        font-size: 60px;
+    }
+
+    .heading-container>img{
+        width: 70px;   
+        top: 18%;
+    }
+
+    .heading-container{
+        padding-left: 10px;
+        display: flex;
+        align-items: center;
+    }
+
+    .buttons-container>a>button{
+        padding: 12px 16px !important;
+        font-size: 16px !important; 
+    }
+
+    .check-container{
+        padding: 4px 8px;
+    }
+
+    .check-container>p{
+        font-size: 16px;
+    }
+
+    .check-container>svg{
+        width: 20px;
+        height: 20px;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) and (max-width: 968px) {
+    .hero-wrapper{
+        flex-direction: column;
+        gap: 16px;
+    }
+
+    .check-section{
+        width: 100%;
+        align-items: flex-start;
+    }
+
+    .main-section{
+        width: 100%;
+    }
+}
+
+@media only screen and (min-width: 968px)  and (max-width: 1366px) {
+
+    .navbar{
+        padding: 20px 40px;
+    }
+
+}
