--- a/frontend/src/styles/Directory/SubmissionContainer.module.css
+++ b/frontend/src/styles/Directory/SubmissionContainer.module.css
@@ -43,6 +43,7 @@
     font-weight: 400;
     font-family: "Inter-Variable";
     color: rgb(255, 255, 247);
+    word-break: break-word;
 }
 
 .submission-container>img{
@@ -70,4 +71,8 @@
     100% {
         transform: rotate(360deg);
     }
+}
+
+@media only screen and (max-width: 768px) {
+
 }
