--- a/frontend/src/styles/Modals/CreateSubmission.module.css
+++ b/frontend/src/styles/Modals/CreateSubmission.module.css
@@ -293,3 +293,41 @@
         transform: rotate(360deg);
     }
 }
+
+@media only screen and (max-width: 768px) {
+    .modal-container{
+        width: 100%;
+        height: 100%;
+        border: none;
+        border-radius: 0px;
+    }
+
+    .item-row{
+        flex-direction: column;
+    }
+
+    .item-row>button{
+        width: 100%;
+    }
+
+    .input-row>label, .input-row>label>h6{
+        width: 100%;
+    }
+
+    .item-input{
+        width: 100%;
+    }
+
+    .input-tabs{
+        flex-direction: column;
+        gap: 8px;
+    }
+
+    .input-tabs>button{
+        width: 100%;
+    }
+
+    .modal-body>button{
+        width: 100%;
+    }
+}
