--- a/frontend/src/styles/Navbar/Nav.module.css
+++ b/frontend/src/styles/Navbar/Nav.module.css
@@ -215,6 +215,93 @@
     height: 20px;
 }
 
+.mobile{
+    display: none;
+}
+
+.slide-modal{
+    width: 80%;
+    height: 100vh;
+
+    margin-right: auto;
+    background: #2D2937;
+    border-right: 1px solid #f0ad2c;
+
+    animation: slideFromLeft 0.2s ease-in-out;
+
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+
+    gap: 32px;
+}
+
+.slide-buttons{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    width: 100%;
+}
+
+.slide-modal>h1{
+    font-size: 24px;
+    font-weight: 600;
+    color: white;
+    font-family: 'SpaceGrotesk-Variable'
+}
+
+.slide-button{
+    font-size: 18px;
+    font-weight: 400;
+    color: white;
+
+    display: flex;
+    align-items: center;
+    gap: 16px;
+
+    border-radius: 12px;
+}
+
+.slide-button>svg{
+    width: 20px;
+    height: 20px;
+    stroke: white;
+}
+
+.slide-button:hover{
+    color: #f0ad2c;
+}
+
+.slide-button:hover>svg{
+    stroke: #f0ad2c;
+}
+
+.selected-slide{
+    color: #f0ad2c;
+}
+
+.selected-slide>svg{
+    stroke: #f0ad2c;
+}
+
+.close{
+    color: #f0ad2c;
+    font-size: 24px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+@keyframes slideFromLeft {
+    0% {
+      transform: translateX(-100%);
+    }
+    100% {
+      transform: translateX(0%);
+    }
+  }
+
+
 @media only screen and (max-width: 768px) {
     .navbar{
         padding: 20px 24px;
@@ -222,6 +309,14 @@
 
     .nav-buttons{
         display: none;
+    }
+
+    .not-mobile{
+        display: none;
+    }
+
+    .mobile{
+        display: block;
     }
 }
 
