--- a/frontend/src/styles/Profile/Submissions.module.css
+++ b/frontend/src/styles/Profile/Submissions.module.css
@@ -10,3 +10,30 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 16px;
 }
+
+@media only screen and (max-width: 768px) {
+    .main-submissions{
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+
+    .submissions-grid{
+        grid-template-columns: 1fr;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 968px) {
+
+    .submissions-grid{
+        grid-template-columns: 1fr 1fr;
+    }
+
+}
+
+@media only screen and (min-width: 968px)  and (max-width: 1366px) {
+
+    .submissions-grid{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+}
