--- a/frontend/src/styles/Sign/SignComponent.module.css
+++ b/frontend/src/styles/Sign/SignComponent.module.css
@@ -28,6 +28,7 @@
     color: #f0ad2c;
     font-family: "Inter-Variable";
     text-align: center;
+    width: 40ch;
 }
 
 .input-row{
@@ -87,6 +88,73 @@
     text-underline-offset: 4px;
 }
 
+.sign-main>img{
+    animation: slit-in-vertical 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+    -webkit-animation: slit-in-vertical 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+@-webkit-keyframes slit-in-vertical {
+    0% {
+      -webkit-transform: translateZ(-800px) rotateY(90deg);
+              transform: translateZ(-800px) rotateY(90deg);
+      opacity: 0;
+    }
+    54% {
+      -webkit-transform: translateZ(-160px) rotateY(87deg);
+              transform: translateZ(-160px) rotateY(87deg);
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: translateZ(0) rotateY(0);
+              transform: translateZ(0) rotateY(0);
+    }
+  }
+  @keyframes slit-in-vertical {
+    0% {
+      -webkit-transform: translateZ(-800px) rotateY(90deg);
+              transform: translateZ(-800px) rotateY(90deg);
+      opacity: 0;
+    }
+    54% {
+      -webkit-transform: translateZ(-160px) rotateY(87deg);
+              transform: translateZ(-160px) rotateY(87deg);
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: translateZ(0) rotateY(0);
+              transform: translateZ(0) rotateY(0);
+    }
+}
+
+.animate{
+    opacity: 0;
+    animation: fadeIn 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s forwards;
+    -webkit-animation: fadeIn 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s forwards;
+
+}
+
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+
+
+
 @media only screen and (max-width: 768px) {
     .input-row{
         width: 100%;
@@ -94,5 +162,9 @@
 
     .sign-main{
         padding: 0px 16px;
+    }
+
+    .sign-supporting>span{
+        width: 100%;
     }
 }
