--- a/frontend/src/styles/Modals/SubmissionView.module.css
+++ b/frontend/src/styles/Modals/SubmissionView.module.css
@@ -106,6 +106,25 @@
     cursor: pointer;
 }
 
+.coords{
+    display: flex;
+    gap: 32px;
+    padding: 8px 16px;
+    border-radius: 12px;
+    width: fit-content;
+    border: 1px solid var(--success-500);
+}
+
+.coords>p{
+    font-size: 20px;
+    font-weight: 600;
+    font-family: "Inter-Variable";
+    color: rgb(255, 255, 247);
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
 @media only screen and (max-width: 768px) {
 
     .submission-view{
