--- a/frontend/src/styles/Profile/Submissions.module.css
+++ b/frontend/src/styles/Profile/Submissions.module.css
@@ -11,6 +11,25 @@
     gap: 16px;
 }
 
+.spinner {
+    width: 18px;
+    height: 18px;
+    border: 3px solid;
+    border-color: rgb(255, 255, 247) transparent rgb(255, 255, 247) transparent;
+    border-radius: 50%;
+    animation: spin-anim 1.2s linear infinite;
+}
+  
+@keyframes spin-anim {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 @media only screen and (max-width: 768px) {
     .main-submissions{
         padding-left: 16px;
