--- a/frontend/src/styles/Navbar/Nav.module.css
+++ b/frontend/src/styles/Navbar/Nav.module.css
@@ -160,6 +160,7 @@
     flex-direction: column;
     gap: 16px;
     padding: 12px;
+    z-index: 5;
 }
 
 
@@ -235,6 +236,7 @@
     padding: 20px;
 
     gap: 32px;
+    z-index: 11;
 }
 
 .slide-buttons{
