--- a/frontend/src/styles/2FA/Main.module.css
+++ b/frontend/src/styles/2FA/Main.module.css
@@ -83,3 +83,11 @@
     font-family: "Inter-Variable";
     text-align: center;
 }
+
+@media only screen and (max-width: 768px) {
+    .main{
+        width: 100%;
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+}
