Add "Apply" button to Hero component

--- a/frontend/src/styles/LandingPage/Hero.module.css
+++ b/frontend/src/styles/LandingPage/Hero.module.css
@@ -167,7 +167,7 @@
         align-items: center;
     }
 
-    .buttons-container>a>button{
+    .buttons-container>a>button, .buttons-container>button{
         padding: 12px 16px !important;
         font-size: 16px !important; 
     }
@@ -183,6 +183,14 @@
     .check-container>svg{
         width: 20px;
         height: 20px;
+    }
+
+    .buttons-container{
+        flex-direction: column;
+    }
+    
+    .buttons-container>a, .buttons-container>a>button, .buttons-container>button{
+        width: 100%;
     }
 }
 
